# gdrive-appdata-browser

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  Cargo.toml  Dioxus.toml  README.md  index.html
.github/workflows/: pipeline.yml
assets/icons/: README.md
e2e/: package-lock.json  package.json  playwright.config.ts
e2e/tests/: app.spec.ts
scripts/: asthmatrack-icon-generator.html  render_asthmatrack_icon.py
src/: browser.rs  drive.rs  gis.rs  main.rs  style.css
